Fixed pause screen too big and neg acorns

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ body, html{
     top:0;
     left:0;
     width:1024px;
-    height:100%;
+    height:599px;
     /** FOR DEMO ONLY **/
     display:none;
     
@@ -150,7 +150,7 @@ body, html{
 
 .screen_buttons{
     position:absolute;
-    height:120px;
+    height:110px;
     width:500px;
     border: 2px solid #000000;
     border-radius: 22px;
@@ -161,9 +161,8 @@ body, html{
 #powerups{
     position:absolute;
     left:92px;
-    top:480px;
+    top:9S0px;
     width:1000px;
-    background:red;
 }
 
 .upgrades{
@@ -187,7 +186,6 @@ body, html{
 
 #upgrade1{    
     clip: rect(0, 70px, 70px, 0);
-    /*opacity:0.5; */
 }
 
 #upgrade2{
@@ -235,16 +233,16 @@ body, html{
 }
 
 #screen_button1{
-    left:231px;
-    top:30px;
+    left:265px;
+    top:180px;
 }
 
 #screen_button2{
-    left:231px;
-    top:160px;
+    left:265px;
+    top:300px;
 }
 
 #screen_button3{
-    left:231px;
-    top:290px;
+    left:265px;
+    top:420px;
 }
